# rust-axum-cassandra

./: Cargo.toml  Dockerfile  README.md
config/: default.toml
src/: main.rs
src/controller/: router.rs
src/model/: api.rs  config.rs  mod.rs  row.rs  service_config.rs  service_state.rs
src/service/: cassandra_service.rs  config_service.rs  mod.rs
