[package]
name = "rust-axum-cassandra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["query", "json"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
serde_with = "3.8"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-logstash = "0.7"
tower-http = { version = "0.5", features = ["compression-full"] }
scylla = "0.13"
scylla-macros = "0.5"
config = "0.14"
strum = "0.26"
strum_macros = "0.26"
