[package]
name = "rust-axum-cassandra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }

axum = { version = "0.7", features = ["query", "json"] }

tower-http = { version = "0.5", features = ["compression-full"] }

serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
serde_with = "3.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-logstash = "0.7"

scylla = "0.13"
scylla-macros = "0.5"

strum = "0.26"
strum_macros = "0.26"

config = "0.14.0"
